--- a/themes/omega-hugo/layouts/partials/header.html
+++ b/themes/omega-hugo/layouts/partials/header.html
@@ -6,7 +6,7 @@
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}">
             {{ if site.Params.logo }}
-            <img class="img-fluid" width="350px" src="{{ site.Params.logo | absURL}}" alt="{{ site.Title }}">
+            <img class="img-fluid" width="{{site.Params.logo_width}}" src="{{ site.Params.logo | absURL}}" alt="{{ site.Title }}">
             {{ else }}
             {{site.Title}}
             {{ end }}
