Adding changes and photos

--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -9820,7 +9820,7 @@ body {
   position: relative;
   z-index: 6; }
   .visions::before {
-    content: 'MADE THINGS';
+    content: 'HARBORTECH';
     font-family: "bebas_neue_regular";
     position: absolute;
     top: 18%;
